--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "sbinf"
+name = "dlutils"
 version = "0.0.1"
 authors = [
   { name="Matthew Craigie", email="m.craigie@uq.edu.au" },
@@ -18,4 +18,4 @@ classifiers = [
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/mcraigie/sbinf"
+"Homepage" = "https://github.com/mcraigie/dlutils"
